@@ -1,3 +1,7 @@
+2005-09-23  Peter Johanson  <latexer@gentoo.org>
+
+	* CSharpBindingCompilerManager.cs: Fix mcs location detection.
+
 2005-08-20  Peter Johanson  <latexer@gentoo.org>
 
 	* templates/GnomeSharp2Project.xpt.xml:
